# BootEdit

./: .gitignore  .gitmodules  README.md  application.py  main.py  pyproject.toml
backend/: __init__.py  backend.py
bootedit/: application.py
bootedit/backend/: __init__.py  backend.py  entry.py  factory.py  fv_ext.py  get_entries.py  test_backend.py  win_backend.py
bootedit/backend/add_uefi_entry/: __init__.py
bootedit/backend/add_uefi_entry/linux/: __init__.py  add_uefi_entry.py  gen_file_path_list.py  get_partitions.py  mount.py
bootedit/backend/entry/: __init__.py  add.py  gen_file_path_list.py  type.py
bootedit/backend/entry/gen_file_path_list/: __init__.py  common.py  linux.py  platform.py  win32.py
bootedit/backend/fv_ext/: __init__.py  current_boot_entry.py  delete_boot_entry.py  entry_loc.py  load_option_path.py
bootedit/backend/mount/: __init__.py  linux.py  mount_error.py  platform.py  type.py  win32.py
bootedit/backend/partition/: __init__.py  current_guid.py  linux.py  type.py
bootedit/backend/partition/win32/: __init__.py  common.py  open_object.py  (+3 more)
bootedit/backend/partition_select/: __init__.py  linux.py
bootedit/logic/: add_uefi_entry.py  application.py  entry_add.py
bootedit/main/: ui.py
bootedit/ui/: add_uefi_entry.py  entry_add.py  entry_table.py  main_window.py  orderable_list.py  orderable_table.py  partition_select.py  utils.py  window.py
bootedit/ui/qt/: __init__.py  add_uefi_entry_ui.py  entry_add.ui  entry_add_ui.py
bootedit/ui_logic/: add_uefi_entry.py  app_logic.py  main_window.py
ui/: orderable_list.py  window.py
(+3 files in other folders)
