[tool.poetry]
name = "bootedit"
version = "0.1.0"
description = "Edit UEFI Boot entries with a Qt GUI"
authors = ["iTrooz"]
license = "GPL2-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
firmware-variables = {git = "https://github.com/netaneld122/firmware-variables", rev="a3f7d59", platform="win32"}
pyqt6 = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
