[tool.poetry]
name = "bootedit"
version = "0.1.0"
description = "Edit UEFI Boot entries with a Qt GUI"
authors = ["iTrooz"]
license = "GPL2-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
firmware-variables = {path = "firmware-variables", develop = true}
pyqt6 = "^6.5.1"
wmi = {version = "^1.5.1", platform = "win32"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
